# polaris-ascension

./: # Code Citations.md  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  ARCHITECTURE_AUDIT_REPORT.md  AUDIT_REPORT.md  AUTO_TUNER_COMPLETE_SUMMARY.md  BENCHMARK_RESULTS.md  BREAKTHROUGH_INTEGRATION_PLAN.md  CHECKLIST_STATUS.md  CLEANUP_SUMMARY.md  COMPETITIVE_ANALYSIS.md  COMPUTE_LAYER_ACTION_PLAN.md  COMPUTE_LAYER_EXECUTIVE_SUMMARY.md  COMPUTE_LAYER_INDEX.md  COMPUTE_LAYER_ROADMAP.md  COMPUTE_QUANTIZATION_SUMMARY.md  COMPUTE_SPARSE_FORMATS_SUMMARY.md  COMPUTE_SPARSE_SUMMARY.md  CONTRIBUTING.md  CORE_LAYER_ADVANCED_ENHANCEMENTS.md  CORE_LAYER_AUDIT.md  CORE_LAYER_ENHANCEMENTS.md  DEMO_EXECUTION_LOG.md  DEPLOYMENT_ACTION_PLAN.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTIVE_SUMMARY.md  FASE_8_BAYESIAN_INTEGRATION_COMPLETE.md  GITHUB_RELEASE_DESCRIPTION.md  GPU_PERFORMANCE_VALIDATION_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.txt  INDEX_COMPLETE_JAN_20_2026.md  INNOVATION_ASSESSMENT.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  (+127 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
config/: api_keys.json
configs/: README.md  api_keys.json.example  default.yaml  optimized.yaml
demos/: demo_session_28_advanced_nas.py
docs/: ADVANCED_ALGORITHM_RESEARCH.md  CHANGELOG.md  CLUSTER_DEPLOYMENT_GUIDE.md  CONSOLIDACION_RESUMEN_ESPAÑOL.md  CONSOLIDATION_EXECUTIVE_SUMMARY.md  CONSOLIDATION_REPORT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_OLD.md  DRIVER_INTEGRATION_UPDATE.md  HIGIENE_REPO_FEB2026.md  HYBRID_DEBUGGING_REPORT.md  HYBRID_KERNEL_DESIGN.md  INFORME_COMPARATIVO_FINAL_FEB2026.md  KERNEL_CACHE.md  MODEL_GUIDE.md  NAS_IMPLEMENTATION.md  NEXT_STEPS.md  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_ROADMAP_FASE_9_UPDATED.md  PHASE1_COMPLETION_REPORT.md  PHASE1_EXTENSION_COMPLETE.md  PHASE1_INTEGRATION_REPORT.md  PHASE3_REPRODUCIBLE_PERFORMANCE_BASELINE_FEB2026.md  PHASE_14_BREAKTHROUGH_REPORT.md  PHASE_5_DEEP_OPTIMIZATION_SUMMARY.md  POWER_MONITORING_GUIDE.md  POWER_MONITORING_IMPLEMENTATION_SUMMARY.md  PROGRESS_TRACKING.md  PROJECT_COMPLETE.md  PROJECT_STATUS_POST_TASK_1_1_2.md  PYTORCH_COMPILATION_STATUS.md  ROADMAP_BREAKTHROUGH_2026Q1.md  ROADMAP_CONTINUOUS_IMPROVEMENT_2026Q2.md  ROADMAP_EJECUCION_INMEDIATA_WEEK38.md  ROADMAP_OPTIMIZATION.md  ROADMAP_README.md  RX590_READINESS_WEEK9_2026-02-08.md  SESSION29_SUMMARY.md  SYSTEM_STATUS_REPORT.md  TASK_1_1_1_DELIVERABLES_INDEX.md  (+11 more)
examples/: README.md  ai_kernel_predictor_demonstration.py  basic_usage.py  benchmark_demo.py  benchmark_with_power_demo.py  create_simple_onnx.py  create_test_models.py  demo_api_client.py  demo_calibrated_selector.py  demo_core_layer.py  demo_darts_nas.py  demo_dynamic_sparse.py  demo_enhanced_inference.py  demo_hybrid.py  demo_kernel_cache.py  demo_opencl_gemm_power.py  demo_opencl_optimization.py  demo_quantization.py  demo_real_simple.py  demo_session16.py  demo_session_27_integration.py  demo_session_28_advanced_nas.py  demo_snn.py  demo_sparse.py  demo_sparse_formats.py  demo_verificable.py  demo_verificable_old.py  distributed_comprehensive_demo.py  image_classification.py  mathematical_experiments.py  multi_model_demo.py  opencl_breakthrough_demonstration.py  optimizations_comparison.py  optimized_inference_demo.py  production_deployment_demo.py  real_dataset_demo.py  research_adapters_demo.py  rx580_optimization_showcase.py  sdk_comprehensive_demo.py  session21_demo.py  (+6 more)
fase_10_multi_gpu/: README.md
fase_10_tensor_core_simulation/: README.md  comprehensive_validation.py  debug_precision.py  debug_simple.py  test_performance.py  validate_tensor_cores.py
fase_11_winograd_transform/: FASE_11_RESULTADOS_COMPLETOS.md  README.md
fase_12_mixed_precision/: FASE_12_RESULTADOS_COMPLETOS.md  README.md
fase_13_gcn_architecture/: FASE_13_RESULTADOS_COMPLETOS.md  README.md
fase_14_ai_kernel_predictor/: README.md
fase_15_bayesian_optimization/: README.md  fase_15_master_script.py
fase_16_quantum_inspired_methods/: README.md
fase_17_neuromorphic_computing/: README.md  validation_results.json
fase_18_hybrid_quantum_classical/: README.md  test_hybrid.py  validation_results.json
fase_7_ai_kernel_predictor/: FASE_7_PREPARATION_PLAN.md  PHASE_7_COMPLETION_SUMMARY.md  README.md
fase_8_bayesian_optimization/: README.md  __init__.py  demo.py  demo_results.json  requirements.txt
fase_9_breakthrough_integration/: INTEGRATION_SUMMARY.md  README.md  final_demonstration.py  hardware_benchmark_system.py  hardware_integration_test.py  hardware_optimized_integration.py  optimization_engines.py  requirements.txt  simplified_hardware_integration.py  simplified_integration_test_results.json  test_advanced_integration.py
infrastructure/: .dockerignore  Dockerfile  alertmanager.yml  docker-compose.yml  prometheus.yml
paper-energy-efficient-polaris/: main.aux
research/: ADVANCED_OPTIMIZATIONS_ANALYSIS.md  FINAL_OPTIMIZATIONS_EVALUATION.md
research/breakthrough_lab/t2_auto_scheduler/rust_sidecar/: .gitignore  Cargo.toml  README.md  pyproject.toml  python_client.py  smoke_test.py
research/breakthrough_lab/t2_auto_scheduler/rust_sidecar/src/: lib.rs
results/: gpu_power_benchmark.json  gpu_power_benchmark.md  gpu_power_simple.json  gpu_power_simple.md  kernel_comparison.json  lds_analysis.json  power_benchmarks.json  power_benchmarks.md  power_benchmarks_full.json  power_benchmarks_full.md  task_1_1_3_execution.json  task_1_1_3_validation.json  technique_1_benchmark_results.json
scripts/: analyze_block_recursive_thresholds.py  analyze_double_buffering.py  analyze_gcn4_capabilities.py  analyze_lds_conflicts.py  analyze_load_results.py  auto_tune_float4_vec.py  benchmark.py  benchmark_all_models_power.py  benchmark_baseline.py  benchmark_gcn4_kernels.py  benchmark_gcn4_optimized.py  benchmark_gcn4_refined.py  benchmark_integrated_kernels.py  benchmark_memory_optimization.py  benchmark_mixed_precision_fp16.py  benchmark_phase3_reproducible.py  benchmark_recursive.py  benchmark_sparse_formats.py  benchmark_strassen.py  benchmark_vectorized.py  (+51 more)
(+2702 files in other folders)
