# ==============================================================================
# pyproject.toml - Project Configuration
# ==============================================================================
# Configuración centralizada para herramientas de desarrollo Python
# ==============================================================================

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-energy-efficient-gpu"
version = "1.0.0"
description = "Energy-Efficient Deep Learning Inference Framework for AMD Polaris GPUs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Jonathan Ciencias", email = "jonathan.ciencias@email.com" },
]
maintainers = [
    { name = "Jonathan Ciencias", email = "jonathan.ciencias@email.com" },
]
keywords = [
    "deep-learning",
    "inference",
    "amd",
    "polaris",
    "opencl",
    "power-monitoring",
    "energy-efficient",
    "legacy-gpu",
    "sustainable-computing",
    "hardware-optimization",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Framework :: AsyncIO",
    "Environment :: GPU",
    "Environment :: GPU :: AMD",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
    "pytest-timeout>=2.1.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pylint>=2.13.0",
]

[tool.setuptools_scm]
write_to = "src/_version.py"

# ==============================================================================
# Black Configuration (Code Formatting)
# ==============================================================================
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directorios a excluir
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# ==============================================================================
# isort Configuration (Import Sorting)
# ==============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/migrations/*", "**/__pycache__/*", "**/build/*", "**/dist/*"]
known_first_party = ["src"]
known_third_party = [
    "numpy",
    "torch",
    "onnx",
    "pyopencl",
    "fastapi",
    "pydantic",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ==============================================================================
# pytest Configuration
# ==============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "opencl: marks tests requiring OpenCL",
    "gpu: marks tests requiring GPU",
]
filterwarnings = ["error", "ignore::UserWarning", "ignore::DeprecationWarning"]

# ==============================================================================
# Coverage Configuration
# ==============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/dist-packages/*",
    "src/benchmarking/*",
    "src/compute/*",
    "src/core/*",
    "src/experiments/*",
    "src/hardware_abstraction/*",
    "src/inference/*",
    "src/cli.py",
    "src/ml_models/ai_kernel_predictor_fine_tuning.py",
    "src/ml_models/ai_kernel_predictor_fine_tuning_corrected.py",
    "src/ml_models/ml_dataset_collector.py",
    "src/ml_models/recalibrate_selector.py",
    "src/optimization_engines/low_rank_matrix_approximator.py",
    "src/optimization_engines/low_rank_matrix_approximator_gcn.py",
    "src/optimization_engines/low_rank_matrix_approximator_gpu.py",
    "src/optimization_engines/coppersmith_winograd_gpu.py",
    "src/utilities/*",
    "src/utils/*",
    "src/utilities/advanced_techniques_investigation.py",
    "src/utilities/quick_analysis.py",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
fail_under = 40
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ==============================================================================
# mypy Configuration (Type Checking)
# ==============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false # Cambiar a true gradualmente
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ==============================================================================
# Bandit Configuration (Security Scanning)
# ==============================================================================
[tool.bandit]
exclude_dirs = ["/tests", "/build", "/dist"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

# ==============================================================================
# Flake8 Configuration
# ==============================================================================
# Nota: flake8 no soporta pyproject.toml nativamente
# Ver .flake8 file para configuración
