[package]
name = "t2_rust_sidecar"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust sidecar scaffold for T2 auto-scheduler search/replay APIs"
license = "MIT"

[lib]
name = "t2_rust_sidecar"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-module = ["dep:pyo3", "pyo3/extension-module", "pyo3/abi3-py38"]

[dependencies]
pyo3 = { version = "0.22", default-features = false, features = ["macros"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
